--- a/src/css/base/global.css
+++ b/src/css/base/global.css
@@ -17,18 +17,25 @@
   margin: 0;
 }
 
+body {
+  background-color: #FAFAFA;
+}
+
 /* Main */
 .main {
   margin: 0 auto;
-  width: 959px;
-  max-width: 959px;
-  padding: 20px;
+  width: 960px;
+  max-width: 960px;
+  display: flex;
+  background-color: white;
 }
 
 /* Section */
 .section {
+  width: 800px;
   border-bottom: 2px solid #888888;
   margin-bottom: 18px;
+  padding: 16px;
 }
 
 /* Color container */
@@ -124,4 +131,31 @@
 .banner__subtitle {
   font-size: 16px;
   color: white;
+}
+
+/* Aside */
+.aside {
+  width: 160px;
+  min-width: 160px;
+  max-width: 160px;
+  display: flex;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 400;
+}
+
+.aside > a {
+  width: 100%;
+  height: 40px;
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.65);
+  display: flex;
+  justify-content: space-between;
+  padding: 0 26px 0 18px;
+  align-items: center;
+}
+
+.aside > a.active {
+  background-color: #E6F7FF;
+  color: #1890FF;
 }
