--- a/src/css/pages/elements.css
+++ b/src/css/pages/elements.css
@@ -66,6 +66,7 @@
   color: var(--color--gray);
   border-radius: 2px 2px 0px 0px;
   box-shadow: inset 1px 0px 0px #888888, inset -1px 0px 0px #888888, inset 0px 1px 0px #888888;
+  cursor: pointer;
 }
 .list__tabs > .item--hover:hover {
   color: #118AB2;
@@ -78,6 +79,7 @@
 
 /* List Items */
 .list > .item {
+  font-family: 'Piazzolla', serif;
   margin-right: 16px;
   height: 40px;
   padding: 0 20px;
@@ -86,6 +88,7 @@
   align-items: center;
   font-size: 20px;
   background-color: var(--color--light-1);
+  cursor: pointer;
 }
 .list > .item--hover:hover {
   background-color: var(--color--blue);
