--- a/src/css/base/global.css
+++ b/src/css/base/global.css
@@ -33,9 +33,8 @@ ul {
 
 /* Main */
 .main {
-  margin: 0 auto;
-  width: 960px;
   max-width: 960px;
+  margin: 0 auto;
   display: flex;
   background-color: white;
 }
@@ -43,6 +42,7 @@ ul {
 /* Section */
 .section {
   width: 800px;
+  max-width: 100%;
   border-bottom: 2px solid #888888;
   margin-bottom: 18px;
   padding: 16px;
